text wrap fix in  rights modal

--- a/src/Components/Dashboard/dashboard.css
+++ b/src/Components/Dashboard/dashboard.css
@@ -485,6 +485,7 @@ svg.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.disabled {
 
 .rights-cards .rights-data{
   padding: 10px 26px;
+  overflow-wrap: anywhere !important;
 }
 
 .rights-cards span.copied {
